fix: fix for nav bar: wrap, scroll and other adjustments

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,7 +3,7 @@ main {
 }
 
 main h1 {
-    margin: 20px 20px 10px;
+    margin: 0 20px 10px;
 }
 
 main h2 {
