--- a/CSS/title.css
+++ b/CSS/title.css
@@ -3,7 +3,7 @@
     flex-flow: wrap;
     justify-content: space-between;
 
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .title h1 {
@@ -16,8 +16,6 @@
     color: coral;
     font-size: 20px;
     text-shadow: 2px 4px 4px #9d0000;
-
-    margin-bottom: 10px;
 }
 
 .title__icon {
@@ -41,6 +39,6 @@
 
     background: #D9D9D9;
     padding: 10px 30px 10px;
-    margin: 10px;
+    margin: 10px 10px 10px;
     border-radius: 40px;
 }
